2002-10-10  Martin Weber <martweb@gmx.net>

	* autotrace.1: updated again.

2002-10-10  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Use ' instead of " to retrieve
	MAGICK_MAJOR_VERSION.

2002-10-10  Martin Weber <martweb@gmx.net>

	* autotrace.1: updated.

2002-10-10  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE2): added <real> to width-factor.

2002-10-09  Masatake YAMATO  <yamato@redhat.com>

	* FAQ: Fix a typo. Suggested by Martin.

	* configure.in: version 0.30.8.
	Updated cocuments.

2002-10-08  Martin Weber <martweb@gmx.net>

	* input-magick.c (input_magick_reader): Use AT_ macros.
	antialiasing is switched off. Update comments. autotrace
	is ready for ImageMagick 5.4.9.

	Message-ID: <3DA2FFF4.5D564F9@gmx.net>.
	
2002-10-08  Martin Weber <martweb@gmx.net>

	* fit.c (split_at_corners, fit_curve_list): 
	handle very small objects.

	Message-ID: <3DA1C87D.786E8E52@gmx.net>
	Message-ID: <3DA1DB6F.1DDA16A1@gmx.net>
	
2002-10-08  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (at_doc__width_factor): added
	label for width_factor.

2002-10-07  Masatake YAMATO  <yamato@redhat.com>

	* input-magick.c (input_magick_reader): removed
	comments. suggested by Martin.

2002-10-07  Martin Weber <martweb@gmx.net>

	* output-eps.c (out_splines): Now the eps output is 
	interpreted correctly by CorelDraw.

	Message-ID: <3DA063E6.32835C45@gmx.net>.

2002-10-07  Martin Weber <martweb@gmx.net>

	* fit.c (find_tangent): fixed a bug in tangent
	calculation.

	Message-ID: <3DA09336.DB788C68@gmx.net>.

2002-10-06  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (free_pixel_outline): New function.
	(CHECK_FATAL_DO): new macro.
	(find_outline_pixels): free outline_list if an exception
	is raised.
	(find_one_outline): free outline if an exception is
	raised.
	(find_centerline_pixels): free outline if  an exception
	is raised. use free_pixel_outline.

2002-10-06  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (find_centerline_pixels): free